2008-08-05  Tor Lillqvist  <tml@novell.com>

	* configure.in: Define GDK_NATIVE_WINDOW_POINTER on 32-bit
	Windows, too. It just makes more sense, as a HWND *is* a kind of
	pointer.

	* gdk/gdkconfig.h.win32: Ditto here.

2008-08-04  Björn Lindqvist  <bjourne@gmail.com>

	Bug 534979 – GtkImageMenuItem is a bin but has two children.

	* gtk/gtkimagemenuitem.c (gtk_image_menu_item_forall): Do not
	include the image widget when iterating over non-internal
	children. Patch by rainwoodman.

2008-08-04  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2008-08-04  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump glib dependency to 2.17.6

2008-08-04  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkclist.c
	* gtk/gtkctree.c
	* gtk/gtkpixmap.c
	* gtk/gtkpreview.c: get rid of using deprecated GDK APIs.

	* gtk/gtktext.c: ditto, apart from the text cruft APIs.

2008-08-04  Michael Natterer  <mitch@imendio.com>

	* gdk/gdk.c (gdk_parse_args): call gdk_rgb_set_verbose(TRUE) if
	"gdkrgb" is in the debug flags.

	* gdk/gdkrgb.c (gdk_rgb_init): remove setting the verbose flag
	here, this function is deprecated and the debug flag didn't work
	when using GDK properly.

2008-08-04  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkicontheme.c: Update to handle GEmblem.

2008-08-04  Michael Natterer  <mitch@imendio.com>

	* tests/prop-editor.c: undeprecate (apart from still using
	GtkOptionMenu).

2008-08-04  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkseparatortoolitem.c
	* tests/testactions.c: remove pointless #undef GTK_DISABLE_DEPRECATED.

	* gtk/gtkcalendar.c (calendar_set_display_option): use
	gtk_calendar_set_display_options() instead of the deprecated
	gtk_calendar_display_options().

2008-08-04  Carlos Garnacho  <carlos@imendio.com>

	* gtk/gtkfilechooserbutton.c: Fix "/* within comment" warning.

2008-08-04  Carlos Garnacho  <carlos@imendio.com>

	* gtk/gtknotebook.c (gtk_notebook_expose): Set drag window background